--- a/src/pages/projetos.scss
+++ b/src/pages/projetos.scss
@@ -9,6 +9,9 @@
         .image {
             height: 200px;
             background-color: grey;
+            background-position: center;
+            background-size: cover;
+            background-repeat: no-repeat;
         }
 
         a {
